--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
 </div>
 <div class="container"><%= yield %></div>
 <footer>
-    <div class="container">Rails Girls 2013</div>
+    <div class="container">Rails Girls 2013 rocks</div>
 </footer>
 </body>
 </html>
